# batespricercpp

./: .gitignore  README.md  pyproject.toml
bates_cpp_project/: CMakeLists.txt
bates_cpp_project/data/: market_data.json
bates_cpp_project/include/batespricer/: analytics.hpp  calibration.hpp  monte_carlo.hpp  types.hpp
bates_cpp_project/scripts/: fetch_market_data.py
bates_cpp_project/src/: analytics.cpp  calibration.cpp  main.cpp  monte_carlo.cpp
cache/: options_AAPL_20260207.json  options_TSLA_20260207.json  options_^SPX_20260221.json
examples/: 1_MARKET_calibration_MC_Fast.py  1_calibration.ipynb  1_market_calibration.py  1_market_calibration_Ana.py  1_market_calibration_Ana_Fast.py  1_market_calibration_MC.py  1_market_calibration_MC_AAPL.py  1_market_calibration_MC_SPX.py  1_market_calibration_naive.py  2_exotic_pricing.ipynb  2_exotic_pricing.py  3_convergence_analysis.py  4_validation_IVsurfaceplotting.py  4_validation_IVsurfaceplottingLight.py  4_validation_IVsurfaceplottinglarger.py  4_validation_IVsurfaceplottinglargerAPPLE.py  5_fetchsse.py  6_historical_backtest.py  7_price_surface.py  7_price_surface_light  7_price_surface_report.py  7_price_surface_report_SPX
results/: calibration_Ana_AAPL_20260207_001220_prices.csv  calibration_Ana_^SPX_20260204_223026_meta.json  calibration_Ana_^SPX_20260204_223026_prices.csv  calibration_Analytic_AAPL_20260207_001220_meta.json  calibration_Analytic_TSLA_20260207_003054_meta.json  calibration_Analytic_TSLA_20260207_003054_prices.csv  calibration_Analytic_^SPX_20260208_022951_prices.csv  calibration_Analytic_^SPX_20260221_143809_meta.json  calibration_Analytic_^SPX_20260221_143809_prices.csv  calibration_Analytic_^SPX_20260221_143921_meta.json  calibration_Analytic_^SPX_20260221_143921_prices.csv  calibration_Analytic_^SPX_20260221_144401_meta.json  calibration_Analytic_^SPX_20260221_144401_prices.csv  calibration_Analytic_^SPX_20260221_144530_meta.json  calibration_Analytic_^SPX_20260221_144530_prices.csv  calibration_Analytic_^SPX_20260221_144659_meta.json  calibration_Analytic_^SPX_20260221_144659_prices.csv  calibration_Analytic_^SPX_20260221_144836_meta.json  calibration_Analytic_^SPX_20260221_144836_prices.csv  calibration_Analytic_^SPX_20260221_145345_meta.json  calibration_Analytic_^SPX_20260221_145345_prices.csv  calibration_Analytic_^SPX_20260221_145439_meta.json  calibration_Analytic_^SPX_20260221_145439_prices.csv  calibration_Analytic_^SPX_20260221_145640_meta.json  calibration_Analytic_^SPX_20260221_145640_prices.csv  calibration_Analytic_^SPX_20260221_150129_meta.json  calibration_Analytic_^SPX_20260221_150129_prices.csv  calibration_Analytic_^SPX_20260221_150331_meta.json  calibration_Analytic_^SPX_20260221_150331_prices.csv  calibration_Analytic_^SPX_20260221_150748_meta.json  calibration_Analytic_^SPX_20260221_150748_prices.csv  calibration_Analytic_^SPX_20260221_152104_meta.json  calibration_Analytic_^SPX_20260221_152104_prices.csv  calibration_Analytic_^SPX_20260221_152501_meta.json  calibration_Analytic_^SPX_20260221_152501_prices.csv  calibration_Analytic_^SPX_20260221_170449_meta.json  calibration_Analytic_^SPX_20260221_170449_prices.csv  calibration_Analytic_^SPX_20260221_170943_meta.json  calibration_Analytic_^SPX_20260221_170943_prices.csv  (+79 more)
(+49 files in other folders)
