[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batespricer"  
version = "1.1.0"
description = "Calibration and Pricing under the Bates Stochastic Volatility Model"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "matplotlib",
    "pytest",
    "yfinance"  
]

[tool.setuptools.packages.find]
where = ["src"]